--- a/environment.yml
+++ b/environment.yml
@@ -1,23 +1,183 @@
-# conda env create --file environment.yml
-# mamba env create --file environment.yml
 name: cdmx-pt
 channels:
-  - anaconda
-  - conda-forge
   - defaults
 dependencies:
-  - black
-  - invoke
-  - jupyter
-  - jupyterlab
-  - matplotlib
-  - nbdime
-  - numpy
-  - pandas
-  - pip
-  - plotly
-  - pyjanitor
-  - pyprojroot
-  - python=3.7
-  - seaborn
-  
+  - abseil-cpp=20211102.0=he9d5cce_0
+  - altair=4.1.0=py_1
+  - argon2-cffi=21.3.0=pyhd3eb1b0_0
+  - arrow-cpp=8.0.0=py310h72c8010_0
+  - asttokens=2.0.5=pyhd3eb1b0_0
+  - attrs=21.4.0=pyhd3eb1b0_0
+  - aws-c-common=0.4.57=hb1e8313_1
+  - aws-c-event-stream=0.1.6=h23ab428_5
+  - aws-checksums=0.1.9=hb1e8313_0
+  - aws-sdk-cpp=1.8.185=he271ece_0
+  - backcall=0.2.0=pyhd3eb1b0_0
+  - blas=1.0=mkl
+  - bleach=4.1.0=pyhd3eb1b0_0
+  - boost-cpp=1.73.0=hca72f7f_12
+  - brotli=1.0.9=hca72f7f_7
+  - brotli-bin=1.0.9=hca72f7f_7
+  - bzip2=1.0.8=h1de35cc_0
+  - c-ares=1.18.1=hca72f7f_0
+  - ca-certificates=2022.07.19=hecd8cb5_0
+  - cachetools=4.2.2=pyhd3eb1b0_0
+  - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - commonmark=0.9.1=pyhd3eb1b0_0
+  - dataclasses=0.8=pyh6d0b6a4_7
+  - decorator=5.1.1=pyhd3eb1b0_0
+  - defusedxml=0.7.1=pyhd3eb1b0_0
+  - executing=0.8.3=pyhd3eb1b0_0
+  - freetype=2.11.0=hd8bbffd_0
+  - gflags=2.2.2=h0a44026_0
+  - giflib=5.2.1=haf1e3a3_0
+  - gitdb=4.0.7=pyhd3eb1b0_0
+  - gitpython=3.1.18=pyhd3eb1b0_1
+  - glog=0.5.0=h23ab428_0
+  - grpc-cpp=1.46.1=h067a048_0
+  - icu=58.2=h0a44026_3
+  - idna=3.3=pyhd3eb1b0_0
+  - intel-openmp=2021.4.0=hecd8cb5_3538
+  - ipython_genutils=0.2.0=pyhd3eb1b0_1
+  - ipywidgets=7.6.5=pyhd3eb1b0_1
+  - jinja2=3.0.3=pyhd3eb1b0_0
+  - jpeg=9e=hca72f7f_0
+  - jupyter_client=7.3.5=py310hecd8cb5_0
+  - jupyter_core=4.10.0=py310hecd8cb5_0
+  - jupyterlab_pygments=0.1.2=py_0
+  - jupyterlab_widgets=1.0.0=pyhd3eb1b0_1
+  - krb5=1.19.2=hcd88c3b_0
+  - lcms2=2.12=hf1fd2bf_0
+  - lerc=3.0=he9d5cce_0
+  - libboost=1.73.0=h3fa6bed_12
+  - libbrotlicommon=1.0.9=hca72f7f_7
+  - libbrotlidec=1.0.9=hca72f7f_7
+  - libbrotlienc=1.0.9=hca72f7f_7
+  - libcurl=7.84.0=h6dfd666_0
+  - libcxx=14.0.6=h9765a3e_0
+  - libdeflate=1.8=h9ed2024_5
+  - libedit=3.1.20210910=hca72f7f_0
+  - libev=4.33=h9ed2024_1
+  - libevent=2.1.12=h0a4fc7d_0
+  - libffi=3.3=hb1e8313_2
+  - libiconv=1.16=hca72f7f_2
+  - libnghttp2=1.46.0=ha29bfda_0
+  - libpng=1.6.37=ha441bb4_0
+  - libprotobuf=3.20.1=h8346a28_0
+  - libsodium=1.0.18=h1de35cc_0
+  - libssh2=1.10.0=h0a4fc7d_0
+  - libthrift=0.15.0=h054ceb0_0
+  - libtiff=4.4.0=h2ef1027_0
+  - libwebp=1.2.2=h56c3ce4_0
+  - libwebp-base=1.2.2=hca72f7f_0
+  - lz4-c=1.9.3=h23ab428_1
+  - mkl=2021.4.0=hecd8cb5_637
+  - mkl_fft=1.3.1=py310hf879493_0
+  - mkl_random=1.2.2=py310hc081a56_0
+  - ncurses=6.3=hca72f7f_3
+  - numpy-base=1.23.1=py310hfd2de13_0
+  - openssl=1.1.1q=hca72f7f_0
+  - orc=1.7.4=h9274d09_0
+  - packaging=21.3=pyhd3eb1b0_0
+  - pandocfilters=1.5.0=pyhd3eb1b0_0
+  - parso=0.8.3=pyhd3eb1b0_0
+  - pexpect=4.8.0=pyhd3eb1b0_3
+  - pickleshare=0.7.5=pyhd3eb1b0_1003
+  - prometheus_client=0.14.1=py310hecd8cb5_0
+  - prompt-toolkit=3.0.20=pyhd3eb1b0_0
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
+  - pure_eval=0.2.2=pyhd3eb1b0_0
+  - pycparser=2.21=pyhd3eb1b0_0
+  - pygments=2.11.2=pyhd3eb1b0_0
+  - pympler=0.9=py_0
+  - pyopenssl=22.0.0=pyhd3eb1b0_0
+  - python=3.10.4=hdfd78df_0
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-fastjsonschema=2.16.2=py310hecd8cb5_0
+  - re2=2022.04.01=he9d5cce_0
+  - readline=8.1.2=hca72f7f_1
+  - semver=2.13.0=pyhd3eb1b0_0
+  - send2trash=1.8.0=pyhd3eb1b0_1
+  - six=1.16.0=pyhd3eb1b0_1
+  - smmap=4.0.0=pyhd3eb1b0_0
+  - snappy=1.1.9=he9d5cce_0
+  - soupsieve=2.3.1=pyhd3eb1b0_0
+  - sqlite=3.39.2=h707629a_0
+  - stack_data=0.2.0=pyhd3eb1b0_0
+  - tk=8.6.12=h5d9f67b_0
+  - toml=0.10.2=pyhd3eb1b0_0
+  - toolz=0.11.2=pyhd3eb1b0_0
+  - traitlets=5.1.1=pyhd3eb1b0_0
+  - typing_extensions=4.3.0=py310hecd8cb5_0
+  - tzdata=2022c=h04d1e81_0
+  - utf8proc=2.6.1=h9ed2024_0
+  - validators=0.18.2=pyhd3eb1b0_0
+  - wcwidth=0.2.5=pyhd3eb1b0_0
+  - wheel=0.37.1=pyhd3eb1b0_0
+  - xz=5.2.6=hca72f7f_0
+  - zeromq=4.3.4=h23ab428_0
+  - zlib=1.2.12=h4dc903c_3
+  - zstd=1.5.2=hcb37349_0
+  - pip:
+    - appnope==0.1.2
+    - argon2-cffi-bindings==21.2.0
+    - beautifulsoup4==4.11.1
+    - blinker==1.4
+    - bottleneck==1.3.5
+    - brotlipy==0.7.0
+    - certifi==2022.9.14
+    - cffi==1.15.1
+    - click==8.0.4
+    - cryptography==37.0.1
+    - debugpy==1.5.1
+    - entrypoints==0.4
+    - fastjsonschema==2.16.2
+    - future==0.18.2
+    - importlib-metadata==4.11.3
+    - invoke==1.6.0
+    - ipykernel==6.15.2
+    - ipython==8.4.0
+    - jedi==0.18.1
+    - jsonschema==4.4.0
+    - jupyter-client==7.3.5
+    - jupyter-core==4.10.0
+    - markupsafe==2.1.1
+    - matplotlib-inline==0.1.6
+    - mistune==0.8.4
+    - mkl-fft==1.3.1
+    - mkl-random==1.2.2
+    - mkl-service==2.4.0
+    - nbclient==0.5.13
+    - nbconvert==6.4.4
+    - nbformat==5.5.0
+    - nest-asyncio==1.5.5
+    - notebook==6.4.12
+    - numexpr==2.8.3
+    - numpy==1.23.1
+    - pandas==1.4.4
+    - pillow==9.2.0
+    - pip==22.1.2
+    - prometheus-client==0.14.1
+    - protobuf==3.20.1
+    - psutil==5.9.0
+    - pyarrow==8.0.0
+    - pydeck==0.7.1
+    - pyparsing==3.0.9
+    - pyrsistent==0.18.0
+    - pysocks==1.7.1
+    - pytz==2022.1
+    - pyzmq==23.2.0
+    - requests==2.28.1
+    - rich==12.5.1
+    - setuptools==63.4.1
+    - streamlit==1.11.0
+    - terminado==0.13.1
+    - testpath==0.6.0
+    - tornado==6.2
+    - typing-extensions==4.3.0
+    - tzlocal==2.1
+    - urllib3==1.26.11
+    - webencodings==0.5.1
+    - widgetsnbextension==3.5.2
+    - zipp==3.8.0
+prefix: /opt/anaconda3/envs/cdmx-pt
